tests/baselines/reference/iteratorSpreadInArray5.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray5.ts(14,33): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray5.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1, ...new SymbolIterator];
                                    ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.